ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
spec:
  rules:
  - http:
      paths:
      - path: /api1
        pathType: Prefix
        backend:
          service:
            name: api1-service
            port:
              name: http
      - path: /api2
        pathType: Prefix
        backend:
          service:
            name: api2-service
            port:
              name: http
      - path: /api3
        pathType: Prefix
        backend:
          service:
            name: api3-service
            port:
              name: http
